--- a/tradeoff.html
+++ b/tradeoff.html
@@ -140,7 +140,7 @@ window.onload = function (evt) {
 </head>
 <body>
 <h2>Tradeoff!</h2>
-<p>Tradeoff! is a game developed by the Natural Capital Project that...
+<p>Tradeoff! is a game developed by the Natural Capital Project that allows participants...
 </p>
 <div class="hr dotted clearfix">&nbsp;</div>
 <h2>About the Game</h2>
