--- a/communicate.html
+++ b/communicate.html
@@ -139,12 +139,18 @@ window.onload = function (evt) {
 <body>
 <h1>Step 6: Communicate (Inform Decisions)</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-<p>
 Once results have been synthesized, it is important to offer targeted communication of this new ecosystem service knowledge to inform decisions. Ecosystem service information can be delivered in many ways, from peer-review papers to reports to diagrams and interactive maps. For this information to be taken up, it should be represented in ways that resonate with the intended audience. We have found that the most effective communication occurs through co-production of knowledge and knowledge products by scientists, policy-makers and stakeholders through an applied process.  
-</p>
-<img src="img/approach_Step6.png">
-<a name="outputs"></a><div class="hr dotted clearfix">&nbsp;</div>
-<img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Outputs</h2>
+<p></p>
+<img src="img/approach_Step6.png" usemap="#step6"><br>
+<map name="step6">
+  <area shape="circle" coords="70,86,55" href="scope.html" alt="Scope">
+  <area shape="circle" coords="205,86,55" href="data.html" alt="Data">
+  <area shape="circle" coords="338,86,55" href="scenarios.html" alt="Scenarios">
+  <area shape="circle" coords="469,86,55" href="analyze.html" alt="Analyze">
+  <area shape="circle" coords="603,86,55" href="synthesize.html" alt="Synthesize">
+</map>
+<a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
+<img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
 <li>Reports and other synthesis projects (maps, presentations, etc.) geared towards the intended audience and decision-context</li>
 <li>Project wrap-up workshop and/or meetings</li>
@@ -159,7 +165,8 @@ Once results have been synthesized, it is important to offer targeted communicat
 </ul>
 <a name="gallery"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/gallery_sm.png" align="left"><h2>&nbsp;&nbsp;Gallery</h2>
-<p>Visit our <a href="http://www.23hq.com/msp_concierge"><b>Visualization Gallery</b></a> to explore examples of different design techniques NatCap has used to translate science information into clear and effective visuals.  Many of these visuals have been used to informing the MSP process in places around the world.</p>
+Visit our <a href="http://www.23hq.com/msp_concierge"><b>Visualization Gallery</b></a> to explore examples of different design techniques NatCap has used to translate science information into clear and effective visuals.  Many of these visuals have been used to informing the MSP process in places around the world.
+<p></p>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
 <b>Q: What’s the best way to present results?</b><br>
@@ -179,7 +186,8 @@ Once results have been synthesized, it is important to offer targeted communicat
 <p></p>
 <a name="use-cases"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/use-cases_sm.png" align="left"><h2>&nbsp;&nbsp;Use-Cases</h2>
-<p>Use the expand [+] button to learn more about this communicate step in the context of select NatCap use-cases.</p>
+Use the expand [+] button to learn more about this communicate step in the context of select NatCap use-cases.
+<p></p>
 <h4>Barbados</h4><p>xxx</p>
 <h4>Vancouver Island</h4><p>xxx</p>
 <h4>Belize</h4><p>xxx</p>
