--- a/data.html
+++ b/data.html
@@ -139,13 +139,20 @@ window.onload = function (evt) {
 
 </head>
 <body>
-<h1>Step 2: Compile Data</h1>
+<h1>Step 2: Data (Compile Information)</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-<p>Since MSP is often multidisciplinary in nature, there can be substantial spatial and non-spatial data requirements. For coastal and marine spatial planning, common data requirements include biophysical and oceanographic information, such as elevation, maps of human activities and socioeconomic characteristics in the coastal zone, and data on the distribution and quality of coastal and marine habitats. When valuation is a part of the assessment, economic data is also needed, which can include market prices, property values, and discount rates. An ecosystem service approach to MSP can help to focus on the specific data requirements to minimize conflicts and maximizing the benefits people obtain from healthy ecosystems.
-</p>
-<img src="img/approach_Step2.png">
-<a name="outputs"></a><div class="hr dotted clearfix">&nbsp;</div>
-<img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Outputs</h2>
+Since MSP is often multidisciplinary in nature, there can be substantial spatial and non-spatial data requirements. For coastal and marine spatial planning, common data requirements include biophysical and oceanographic information, such as elevation, maps of human activities and socioeconomic characteristics in the coastal zone, and data on the distribution and quality of coastal and marine habitats. When valuation is a part of the assessment, economic data is also needed, which can include market prices, property values, and discount rates. An ecosystem service approach to MSP can help to focus on the specific data requirements to minimize conflicts and maximizing the benefits people obtain from healthy ecosystems.
+<p></p>
+<img src="img/approach_Step2.png" usemap="#step2"><br>
+<map name="step2">
+  <area shape="circle" coords="75,92,55" href="scope.html" alt="Scope">
+  <area shape="circle" coords="365,92,55" href="scenarios.html" alt="Scenarios">
+  <area shape="circle" coords="487,92,55" href="analyze.html" alt="Analyze">
+  <area shape="circle" coords="632,92,55" href="synthesize.html" alt="Synthesize">
+  <area shape="circle" coords="763,92,55" href="communicate.html" alt="Communicate">
+</map>
+<a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
+<img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
 <li>Preliminary spatial layers that can be refined through iterative analysis and synthesis (<i>early</i>)</li>
 <li>Working database to use as inputs to MSP decision-support tools (<i>middle of project</i>)</li>
@@ -161,7 +168,7 @@ window.onload = function (evt) {
 </ul>
 <a name="databases"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/databases_sm.png" align="left"><h2>&nbsp;&nbsp;Global Databases</h2>
-<p>We organize global MSP datasets into the following thematic categories. Click on the name to visit each website.</p>
+We organize global MSP datasets into the following thematic categories. Click on the name to visit each website.
 <ol>
 <li><b><u>Biophysical</u></b> - Physiographic, oceanographic, climatological, and biological</li>
 <li><b><u>Cultural</u></b> - Geopolitical, human use activities and infrustructure, socio-economic</li>
@@ -225,7 +232,8 @@ Pre-processing spatial and tabular data is a challenging but necessary step befo
 <p></p>
 <a name="use-cases"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/use-cases_sm.png" align="left"><h2>&nbsp;&nbsp;Use-Cases</h2>
-<p>Use the expand [+] button to learn more about this data compilation step in the context of select NatCap use-cases.</p>
+Use the expand [+] button to learn more about this data compilation step in the context of select NatCap use-cases.
+<p></p>
 <h4>Belize</h4><p>xxx</p>
 <h4>Barbados</h4><p>Data coordination between multiple partners was essential in Barbados.  We used Google Docs to keep an updated list of the data we already had, the data we could readily access if needed, and the data we hoped to acquire.  Having a shared document kept track of data details (e.g., source, spatial coverage, resolution, etc.).  Preliminary runs of certain InVEST models helped identify additional data needs and demonstrate for partners how data would be used.</p>
 <h4>Vancouver Island</h4><p>xxx</p>
