--- a/iterate.html
+++ b/iterate.html
@@ -22,11 +22,21 @@
 <body>
 <h1>Iterate</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-<p>
-<p>Iteration can occur within each step, and over the entire process.  For example, <b><a href="scope.html">Scoping</a></b> (step 1) involves defining problem definition and identification of key partnerships and stakeholders, who often bring to the table additional insights, issues, and capacities that can be intergated throughout.  The <b><a href="data.html">Data</a></b> and <b><a href="analyze.html">Analyze</a></b> steps often involve iteration through which results from intial, coarse analyses illustrate critical gaps.  At times, communication of results to new audiences will help identify new decision questions that require new data collection, scenarios, analysis, or synthesis.</p>
-<p>The following is a diagram of the framework for ecosystem service assessment proposed by Rosenthal and colleagues (2014).  We have adapted this framework for marine spatial planning. Iteration is critical within each step of the process (orange inset) and between steps (inset again) for the entire process to be effective.  We find that revisiting steps 1-3 after <b><a href="synthesize.html">Synthesize</a></b> (step 5) are the most common pathways for iteration; however, other trajectories do occur.
-</p>
+Iteration can occur within each step, and over the entire process.  For example, <b><a href="scope.html">Scoping</a></b> (step 1) involves defining problem definition and identification of key partnerships and stakeholders, who often bring to the table additional insights, issues, and capacities that can be intergated throughout.  The <b><a href="data.html">Data</a></b> and <b><a href="analyze.html">Analyze</a></b> steps often involve iteration through which results from intial, coarse analyses illustrate critical gaps.  At times, communication of results to new audiences will help identify new decision questions that require new data collection, scenarios, analysis, or synthesis.
+<p></p>
+The following is a diagram of the approach for ecosystem service assessment proposed by Rosenthal and colleagues (2014).  Here we have adapted it for marine spatial planning. Iteration is critical within each step of the process (orange inset) and between steps (inset again) for the entire process to be effective.  We find that revisiting steps 1-3 after <b><a href="synthesize.html">Synthesize</a></b> (step 5) are the most common pathways for iteration; however, other trajectories do occur.
+<p></p>
 <img src="img/approach_wInset.png">
+<a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
+<img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
+<ul>
+<li>xxx</li>
+</ul>
+<a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
+<img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
+<ul>
+<li>xxx</li>
+</ul>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
 <b>Q: How do I know when to move on to the next step?</b><br>
