--- a/links.html
+++ b/links.html
@@ -138,9 +138,9 @@ window.onload = function (evt) {
 </head>
 <body>
 <img src="img/headers/links_sm.png" align="left"><h1>&nbsp;&nbsp;Links</h1>
-<p>Use the expand [+] button to explore <b>readings and other online resources for each MSP step</b>.<br>Cross-cutting links (bridging multiple steps) are included at the bottom of this page.</p>
+Use the expand [+] button to explore <b>readings and other online resources for each MSP step</b>.<br>Cross-cutting links (bridging multiple steps) are included at the bottom of this page.
+<p></p>
 <h4>Scope</h4>
-<p>
 <ul>
 <li>Douvere, F. (2008). "The importance of marine spatial planning in advancing ecosystem-based sea use management." <i>Marine Policy</i>, 32(5), 762-771. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X0800064X" target="_blank">doi:10.1016/j.marpol.2008.03.021</a></li>
 <li>Foley, Melissa M., et al. "Guiding ecological principles for marine spatial planning." <i>Marine Policy</i> 34.5 (2010): 955-966. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X10000436" target="_blank">doi:10.1016/j.marpol.2010.02.001</a></li>
@@ -148,7 +148,6 @@ window.onload = function (evt) {
 " target="_blank">http://hdl.handle.net/1834/4475</a></li>
 <li><a href="http://searchmesh.org/default.aspx?page=1931" target="_blank"><b>MESH Scoping Tool</b></a> - A Flash interactive tool and guidance for undertaking an ocean  mapping/survey project</li>
 </ul>
-</p>
 <div class="hr dotted clearfix">&nbsp;</div>
 <h4>Data</h4>
 <ul>
@@ -198,6 +197,8 @@ window.onload = function (evt) {
 <div class="hr dotted clearfix">&nbsp;</div>
 <h4>Cross-Cutting Steps</h4>
 <ul>
+<li>Rosenthal, Amy, et al. "Process matters: a framework for conducting decision-relevant assessments of ecosystem services." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> (2014): 1-15. <a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank">doi:10.1080/21513732.2014.966149</a></li>
+<li>Ruckelshaus, Mary, et al. "Notes from the field: Lessons learned from using ecosystem service approaches to inform real-world decisions." <i>Ecological Economics</i> (2013). <a href="docs/Ruckelshaus_etal_2014_EE.pdf" target="_blank">doi:10.1016/j.ecolecon.2013.07.009</a></li>
 <li><a href="http://openchannels.org/" target="_blank"><b>OpenChannels</b></a> - An online community of ocean planners and managers sharing experience, knowledge, and advice with peers</li>
 <li><a href="http://www.ebmtools.org/" target="_blank"><b>EBM Tools Network</b></a> - Offers tools, training and webinars on coastal and marine planning and management</li>
 <li><a href="http://pacmara.org/tikiwiki/tiki-download_file.php?fileId=233" target="_blank"><b>Decision Guide: Selecting decision support tools for marine spatial planning</b></a> - Center for Ocean Solutions (COS) and PacMARA</li>
@@ -205,8 +206,6 @@ window.onload = function (evt) {
 <li><a href="http://bluesolutions.info/solutions/" target="_blank"><b>Blue Solutions</b></a> - A database of solutions to marine and coastal challenges that are impactful, scalable, and can be replicated</li>
 <li><a href="http://www.cmspadvancement.com/" target="_blank"><b>CMSP Advancement Training</b></a> - Free training in the United States for coastal managers and MSP practitioners</li>
 </ul>
-<hr>
-&copy; Copyright</b> <a href="http://www.naturalcapitalproject.org" target="_blank">Natural Capital Project</a>
 <a class="float right" href="#">top</a>
 </body>
 </html>
