--- a/scope.html
+++ b/scope.html
@@ -139,12 +139,18 @@ window.onload = function (evt) {
 <body>
 <h1>Step 1: Scope</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-<p>
 Scoping (or framing) to link to the decisions and decision-makers of interest is essential for framing appropriate scientific questions, improving the quality of analytical outputs, and increasing the likelihood that results are salient and accessible to stakeholders and policymakers. It can also create the conditions that enable success by clarifying the policy question and ecosystem services of interest, identifying local leaders and champions, and identifying whether a policy window has opened up or could open as the result of the research.
-</p>
-<img src="img/approach_Step1.png"><br>
-<a name="outputs"></a><div class="hr dotted clearfix">&nbsp;</div>
-<img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Outputs</h2>
+<p></p>
+<img src="img/approach_Step1.png" usemap="#step1"><br>
+<map name="step1">
+  <area shape="circle" coords="235,85,55" href="data.html" alt="Data">
+  <area shape="circle" coords="365,85,55" href="scenarios.html" alt="Scenarios">
+  <area shape="circle" coords="499,85,55" href="analyze.html" alt="Analyze">
+  <area shape="circle" coords="634,86,55" href="synthesize.html" alt="Synthesize">
+  <area shape="circle" coords="765,85,55" href="communicate.html" alt="Communicate">
+</map>
+<a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
+<img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
 <li>Established partnerships with clear roles and responsibilities for each individual or organization</li>
 <li>Clear understanding of the scientific or policy questions to be answered</li>
@@ -197,9 +203,9 @@ This step serves to link the decisions, decision-makers, and scientific support 
 <p></p>
 <a name="use-cases"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/use-cases_sm.png" align="left"><h2>&nbsp;&nbsp;Use-Cases</h2>
-<p>Use the expand [+] button to learn more about this scoping step in the context of select NatCap use-cases.</p>
-<h4>Barbados</h4><p> To aid in a coastal management plan for Barbados, NatCap worked with key organizational partners to create a formal literature review and gap analysis for review by the Inter-American Development Bank (IDB).  The report outlined the provisioning, regulating, and cultural ecosystem services of interest and identified threats to these services.  The project team then collected, reviewed, and synthesized available literature and spatial data.  In addition to this synthesis, preliminary runs of select InVEST models were used to identify data gaps.  The literature review and data gap assessment not only organized key information, but also served as a method to gain consensus about the most important ecosystem services and the steps needed to complete a marine spatial plan.
-</p>
+Use the expand [+] button to learn more about this scoping step in the context of select NatCap use-cases.
+<p></p>
+<h4>Barbados</h4><p> To aid in a coastal management plan for Barbados, NatCap worked with key organizational partners to create a formal literature review and gap analysis for review by the Inter-American Development Bank (IDB).  The report outlined the provisioning, regulating, and cultural ecosystem services of interest and identified threats to these services.  The project team then collected, reviewed, and synthesized available literature and spatial data.  In addition to this synthesis, preliminary runs of select InVEST models were used to identify data gaps.  The literature review and data gap assessment not only organized key information, but also served as a method to gain consensus about the most important ecosystem services and the steps needed to complete a marine spatial plan.</p>
 <h4>Vancouver Island</h4><p>xxx</p>
 <h4>Belize</h4><p>xxx</p>
 <h4>New England</h4><p>xxx</p>
