--- a/synthesize.html
+++ b/synthesize.html
@@ -139,12 +139,18 @@ window.onload = function (evt) {
 <body>
 <h1>Step 5: Synthesize</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-<p>
 Results from tools used in the previous step are often not in a usable format. Synthesizing decision-support tool outputs allows stakeholders to visualize and compare multiple ecosystem services in space and identify synergies (or bundles) and trade-offs. This step often involves substantial “post-processing” of model outputs. Examples of post-processing include converting outputs to local monetary units, normalizing outputs across services, and producing clear visualizations of spatial outputs that inform framing questions about coastal management and restoration.
-</p>
-<img src="img/approach_Step5.png">
-<a name="outputs"></a><div class="hr dotted clearfix">&nbsp;</div>
-<img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Outputs</h2>
+<p></p>
+<img src="img/approach_Step5.png" usemap="#step5"><br>
+<map name="step5">
+  <area shape="circle" coords="71,86,55" href="scope.html" alt="Scope">
+  <area shape="circle" coords="205,86,55" href="data.html" alt="Data">
+  <area shape="circle" coords="337,86,55" href="scenarios.html" alt="Scenarios">
+  <area shape="circle" coords="468,86,55" href="analyze.html" alt="Analyze">
+  <area shape="circle" coords="759,86,55" href="communicate.html" alt="Communicate">
+</map>
+<a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
+<img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
 <li>Qualitative and quantitative comparisons for each ecosystem service of interest under each scenario</li>
 <li>Maps, tables, and other visuals that help to summarize scenarios and can be used to communicate results</li> 
@@ -157,12 +163,13 @@ Results from tools used in the previous step are often not in a usable format. S
 </ul>
 <a name="gallery"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/gallery_sm.png" align="left"><h2>&nbsp;&nbsp;Gallery</h2>
-<p>Visit our <a href="http://www.23hq.com/msp_concierge"><b>Visualization Gallery</b></a> to explore examples of design techniques NatCap has used to translate science information into effective visuals.  Many of these synthesis products have been used to inform the MSP process around the world.</p>
+Visit our <a href="http://www.23hq.com/msp_concierge"><b>Visualization Gallery</b></a> to explore examples of design techniques NatCap has used to translate science information into effective visuals.  Many of these synthesis products have been used to inform the MSP process around the world.
+<p></p>
 <a name="tools"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;Helper Tools</h2>
-<p><img src="img/off_ramp.png"><br>
+<img src="img/off_ramp.png"><br>
 Synthesizing spatial outputs from decision-support tools can be challenging.  NatCap has created helper tools (or "off-ramps") to enable InVEST users to quickly explore results, perform basic post-processing, and assess outcomes without the need for a desktop GIS.
-</p>
+<p></p>
 The following are links to examples of InVEST helper tools: 
 <ol>
 <li><a href="http://vulpes.sefs.uw.edu/ttapp/cv-dash.php" target="_blank"><b>InVIEW</b></a> is a web app that automates common synthesis and visualization tasks that may be necessary after each InVEST model run. InVIEW displays the results of your latest model run in a web browser.  The tool allows InVEST users to easily explore and extracting meaning from raw results without the use of a desktop GIS.  With InVIEW, a user can:
@@ -193,7 +200,8 @@ The following are links to examples of InVEST helper tools:
 <p></p>
 <a name="use-cases"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/use-cases_sm.png" align="left"><h2>&nbsp;&nbsp;Use-Cases</h2>
-<p>Use the expand [+] button to learn more about this synthesize step in the context of select NatCap use-cases.</p>
+Use the expand [+] button to learn more about this synthesize step in the context of select NatCap use-cases.
+<p></p>
 <h4>Barbados</h4><p>xxx</p>
 <h4>Vancouver Island</h4><p>xxx</p>
 <h4>Belize</h4><p>xxx</p>
