--- a/analyze.html
+++ b/analyze.html
@@ -139,12 +139,18 @@ window.onload = function (evt) {
 <body>
 <h1>Step 4: Analyze (Assess Outcomes)</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-<p>
 The "Analyze" step involves assessing outcomes by modeling how change in ecosystems and social and economic conditions under alternative future scenarios leads to change in environmental benefits and values for people. Results can be spatially explicit and, when possible, should be directly tied to local beneficiaries (i.e., demand for those benefits) and reported using metrics that will resonate with stakeholders and policy-makers.
-</p>
-<img src="img/approach_Step4.png">
-<a name="outputs"></a><div class="hr dotted clearfix">&nbsp;</div>
-<img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Outputs</h2>
+<p></p>
+<img src="img/approach_Step4.png" usemap="#step4"><br>
+<map name="step4">
+  <area shape="circle" coords="70,93,55" href="scope.html" alt="Scope">
+  <area shape="circle" coords="204,93,55" href="data.html" alt="Data">
+  <area shape="circle" coords="337,93,55" href="scenarios.html" alt="Scenarios">
+  <area shape="circle" coords="631,93,55" href="synthesize.html" alt="Synthesize">
+  <area shape="circle" coords="764,93,55" href="communicate.html" alt="Communicate">
+</map>
+<a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
+<img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
 <li>Output from successful model runs for each scenario</li>
 <li>Depending on the model or tool used, outputs are likely in multiple formats (e.g., maps, tables, HTML summary, etc.)</li>
@@ -158,7 +164,8 @@ The "Analyze" step involves assessing outcomes by modeling how change in ecosyst
 </ul>
 <a name="tools"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;MSP Decision-Support Tools and Use-Cases</h2>
-<p>Below we list some freely-available MSP analysis toolkits. Click on the tool's name to visit its website or click on the sub-bullet links to learn specifically how they were applied through an MSP use-case.</p>
+Below we list some freely-available MSP analysis toolkits. Click on the tool's name to visit its website or click on the sub-bullet links to learn specifically how they were applied through an MSP use-case.
+<p></p>
 <ol>
 <li><a href="http://www.ariesonline.org" target="_blank"><b>AIRES</b></a>
 <br>&#8226; <a href="http://www.ariesonline.org/case_studies/madagascar.html" target="_blank">Madagascar</a> - ARIES marine ecosystem services models also developed for Madagascar, focusing on coastal storm regulation and subsistence fisheries. Both of these services are critical for Madagascar, due to its reliance on fisheries for protein and its susceptibility to tropical storms forming in the southwest Indian Ocean.
@@ -204,7 +211,8 @@ The "Analyze" step involves assessing outcomes by modeling how change in ecosyst
 <p></p>
 <a name="use-cases"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/use-cases_sm.png" align="left"><h2>&nbsp;&nbsp;Use-Cases</h2>
-<p>Use the expand [+] button to learn more about this analyze step in the context of select NatCap use-cases.</p>
+Use the expand [+] button to learn more about this analyze step in the context of select NatCap use-cases.
+<p></p>
 <h4>Barbados</h4><p>xxx</p>
 <h4>Vancouver Island</h4><p>xxx</p>
 <h4>Mozambique</h4><p>xxx</p>
